syntax = "proto3";

package apis;

option go_package = "github.com/EGT-Ukraine/go2gql/tests/dataloader/generated/clients/apis;apis";

import "google/protobuf/empty.proto";

service ItemsReviewService {
    rpc List (ListRequest) returns (ListResponse) {
    }
}

message ListRequest {
    repeated int64 item_id = 1;
}

message ListResponse {
    repeated Review reviews = 1;
}


message Review {
    int64 id = 1;
    int64 item_id = 2;
    string text = 3;
}
